--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "zendframework/zend-http": "2.*"
+        "zendframework/zend-http": "2.*",
+        "querypath/QueryPath": ">=2.0.0"
     },
     "license": "MIT",
     "autoload": {
